# kurama

./: Cargo.toml  Makefile  README.mediawiki  config.json  hello.html  links.json
assets/css/: common.css
content/: hello.md
src/: archive.rs  build_mode.rs  clean.rs  commands.rs  configuration.rs  create.rs  generate.rs  init.rs  kurama.rs  link.rs  main.rs  metadata.rs  navigation_item.rs  page.rs  paginator.rs  post.rs  save_string.rs  section.rs  serve.rs  site.rs  store.rs
templates/: base.html  page.html  test.html
wix/: main.wxs
