[package]
name = "kurama"
version = "0.1.1"
authors = ["Bryce Campbell <tonyhawk2100@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Static site generator that uses the Tera template enginge."
homepage = "https://github.com/bryceac/kurama"
readme = "README.mediawiki"
repository = "https://github.com/bryceac/kurama"
keywords = ["kurama", "static", "site", "generator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
lazy_static = "1.4"
pulldown-cmark = "0.9"
yaml-front-matter = "0.1"
tokio = { version = "1", features = ["full"]}
warp = "0.3"
fs_extra = "1.2"
clap = { version = "3.0", features = ["derive"] }
shellexpand = "2.1"
local-ip-address = "0.4"
futures = "0.3"