[package]
name = "kurama"
version = "0.1.1"
authors = ["Bryce Campbell <tonyhawk2100@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Static site generator that uses the Tera template enginge."
homepage = "https://github.com/bryceac/kurama"
readme = "README.mediawiki"
repository = "https://github.com/bryceac/kurama"
keywords = ["kurama", "static", "site", "generator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml-front-matter = "0.1"
tokio = { version = "1", features = ["full"]}
warp = "0.3"
clap = { version = "3.0", features = ["derive"] }
shellexpand = "2.1"
futures = "0.3"
serde_yaml_bw = "2.0.1"
fs_extra = "1.3.0"
local-ip-address = "0.6.5"
pulldown-cmark = "0.13.0"

[package.metadata.deb]
license-file = ["LICENSE", "4"]
extended-description = """\
A static site generator written in Rust and uses JSON configuration."""
section = "unknown"
priority = "optional"
assets = [
    ["target/release/kurama", "usr/local/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/kurama", dest = "/usr/local/bin/", mode = "755" },
]
